refactored code + added styling, updated readme.md

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
     <title>Broth & Ladle</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to view these perfect recipes!</noscript>
+    <noscript
+      >You need to enable JavaScript to view these perfect recipes!</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
