finish AddRecipe component, create a scratch of RcipeDetails component

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,19 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Broth &amp; Ladle</title>
   </head>
   <body>
-    <noscript
-      >You need to enable JavaScript to view these perfect recipes!</noscript
-    >
+    <noscript>You need to enable JavaScript to view these perfect recipes!</noscript>
     <div id="root"></div>
   </body>
 </html>
